force-app/main/default/objects/Action_Team__c/Action_Team__c.object-meta.xml
<CustomObject>
    <description>Information about  team that will work on approve/reject/amendment of  Opportunites, Orders and Invoices related to editions of selected series.</description>
    <label>Action Team</label>
    <nameField>
        <displayFormat>AT# - {0000}</displayFormat>
        <label>Action Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>