force-app/main/default/objects/Action_Team__c/fields/Action_Team_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Team_Description__c</fullName>
    <description>Description of action team.</description>
    <label>Action Team Description</label>
    <type>TextArea</type>
</CustomField>