force-app/main/default/objects/Action_Team__c/fields/Action_Team_Description_Link__c.field-meta.xml
<CustomField>
    <fullName>Action_Team_Description_Link__c</fullName>
    <description>formula to show description of action team as link.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Action_Team_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Team Description Link</label>
    <type>Text</type>
</CustomField>