force-app/main/default/objects/Action_Team__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Series to which action team belongs.</description>
    <label>Series</label>
    <referenceTo>Series__c</referenceTo>
    <relationshipName>SSC_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>