force-app/main/default/objects/Action_Team__c/validationRules/SSC_Team_Record_Owner_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SSC_Team_Record_Owner_Validation</fullName>
    <active>true</active>
    <description>SSC Team Record Owner Validation.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;GE System Administrator&quot;,$Profile.Name &lt;&gt; &quot;GE BA Administrator&quot;,$Profile.Name &lt;&gt; Owner:User.Profile.Name ,ISCHANGED(OwnerId))</errorConditionFormula>
    <errorMessage>User Record Owner Should be System Administrator or GE system Administrator, User Profile and record owner profile.</errorMessage>
</ValidationRule>